<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_A1" Id="{2b742e08-44e2-4eb9-929b-aadbdbcbca42}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL

//
// Eingänge Bohrmodell
//=================================

GL1_B1_BG1		AT%I*	: BOOL;  // Belegtmeldung Station Zuführen [TRUE = belegt]
GL2_B2_BG1		AT%I*	: BOOL;  // Belegtmeldung Station Bearbeiten [TRUE = belegt]
GL3_B3_BG1		AT%I*	: BOOL;  //"Belegtmeldung Station Bereitstellen [TRUE = belegt]"
TM1_B2_BG1		AT%I*	: BOOL;  // "Endlage Bohrwerk hinten [TRUE = hinten]"
TM1_B2_BG2		AT%I*	: BOOL;  // "Endlage Bohrwerk vorne [TRUE = vorne]"
S01_C2_SF1		AT%I*	: BOOL;  // "Taster Station Zuführen "
S01_C3_SF1		AT%I*	: BOOL;  // "Taster Station Bereitstellen "
GL1_B1_BQ1		AT%I*	: BOOL;  // "Materialerkennung Station Zuführen [TRUE = Metall]"

//
// Ausgänge Bohrmodell
//=================================

GL1_B1_MA1		AT%Q*	: BOOL;  // "Motor Station Zuführen "
GL2_B2_MA1		AT%Q*	: BOOL;  // "Motor Station Bearbeiten"
GL3_B3_MA1		AT%Q*	: BOOL;  // "Motor Station Bereitstellen"
TM1_B2_MA1		AT%Q*	: BOOL;  // "Motor Bohrspindel"
TM1_B2_MA2_1	AT%Q*	: BOOL;	 // "Bohrschlitten zurück"
TM1_B2_MA2_2	AT%Q*	: BOOL;	 // "Bohrschlitten vor"        
S01_C2_PF1		AT%Q*	: BOOL;  // "Anzeige grün Station Zuführen "
S01_C2_PF2		AT%Q*	: BOOL;  // "Anzeige rot Station Zuführen "
S01_C3_PF1		AT%Q*	: BOOL;  // "Ampel rot Station Bereitstellen "
S01_C3_PF2		AT%Q*	: BOOL;  // "Ampel gelb Station Bereitstellen "
S01_C3_PF3		AT%Q*	: BOOL;  // "Ampel grün Station Bereitstellen "
S01_C3_PF4		AT%Q*	: BOOL;  // "Anzeige gelb Station Bereitstellen "
S01_C3_PJ1		AT%Q*	: BOOL;	 // "Signalgeber Hupe Station Bereitstellen "

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>